# SARC

./: .btd.yml  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  config-cloud-run.yaml  milatools_usage_report.py  pyproject.toml  renovate.json  run.Dockerfile  tox.ini
.github/workflows/: build_the_doc_test.yml  python-package.yml  update-version.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0d7c2fffa4bb_.py  10c932c4bf84_.py  23cb46269fc9_.py  4296b76d028b_.py  4d431efff45f_job_series_view_users_join_left_sarc_.py  4e1501ea2d2c_.py  5d6e3593ea8b_.py  60adeee6f30b_job_series_view_clusters_join_left_.py  6aa127180ee0_.py  8b64449c3eda_.py  96c26f4d2fc8_.py  a24d2967a725_.py  b97ab140e1eb_.py  bf55e6fd9b29_.py  bfe9870d0871_.py  c2260a114ac8_.py  c8f3a1b920d4_.py  ca3d9ce31858_.py  ce6300483aaf_.py  d64ccf9cd902_job_series_view_member_type_join_.py  d7fce3746ec9_.py  d90713f64d2b_.py  da6dcad6b9f2_.py  dbf2cc8b0356_.py  e48cef9efb1e_.py  ff1795ca47a3_.py
config/: api.yaml  check.sh  patch.sh  pkey.yaml  sarc-client.json  sarc-client.yaml  sarc-cloud.yaml  sarc-dev.json  sarc-dev.yaml  sarc-inodes.json  sarc-prod.json  sarc-prod.yaml  sarc-ref.yaml
data/: allocations.csv
docs/: README.md  _generate_openapi.py  account_matching.md  account_matching_manual_procedure.md  api.rst  cloud-run-deployment.md  conf.py  dashboard-feedback-checklist.md  deployment.md  index.rst  openapi.json  remote_mongo_access.md  requirements.txt  secrets.md
docs/dev_overview/: README.md  backups.md  cli_db.md  cli_jobs.md  cli_slurmconfig.md  client_scraping_modes.md  clusters.md  config_file.md  connections_diagram.md  db_connection.md  diagramme.md  health_monitor.md  loki.md  mongodb_connection.md  rgu.md  roadmap.md  scheduling.md  secrets.md  storage.md  underusage_notifications.md  users.md
docs/notebooks/: index.rst  notebook_1_sarc_connection_and_users_list.ipynb  notebook_2_jobs_from_users_list.ipynb  notebook_3_usage_stats.ipynb
docs/scripts/: README.md
examples/: allocation_usage.py  compare_load_job_series_functions.py  disk_usage.py  generate_students_supervisors_RAC.py  milatools-sarc-client.json  milatools_usage_report.py  trends.py  usage_stats.py  utils.py  waste_stats.py
examples/gui_rest/: README.md  __main__.py  dialogs.py  utils.py  workers.py
examples/prometheus_cache/: check_many_metrics.py  cli_with_query_range.py
fixes/: check_csv_gpus.py  db_stats_before.txt  gpu_billing_from_mongodb.py  gpu_billing_to_sql.py  jobs_csv_to_sql.py  try_distant.py
sarc/: cache.py  config.py  logging.py  model.py  traces.py  utils.py
sarc/account_matching/: make_matches.py  name_distances.py  update_account_matches_in_database.py
sarc/alerts/: __init__.py  cache.py  checks.py  common.py  fetch.py  fixtures.py  healthcheck_state.py  monitor.py  runner.py
sarc/allocations/: __init__.py  allocations.py  update.py
sarc/api/: auth.py  main.py  metrics.html  metrics.py  v0.py  v1.py
sarc/app/: components.py  plot-default-config.yaml  plot-prompt-template.txt  plot.py  style.css
sarc/cli/: __init__.py  encrypt.py  utils.py
sarc/client/: __init__.py  api.py  gpumetrics.py  job.py  rgu.py  rgumetrics.py  series.py
sarc/common/: config.py  utils.py
sarc/core/: db_init.py  utils.py
sarc/db/: __init__.py  __main__.py  allocation.py  cluster.py  diskusage.py  healthcheck.py  heatlhcheck.py  job.py  job_series.py  runstate.py  sqlmodel.py  support.py  users.py
sarc/inode_storage_scanner/: get_diskusage.py  parse_diskusage_report.py
sarc/jobs/: __init__.py  acquire.py  db.py  job.py  node_gpu_mapping.py  nodename_to_gpu.json  nodenames_cedar.txt  nodenames_graham.txt  prometheus_scraping.py  sacct.py  series.py  waste.py
sarc/ldap/: acquire.py  api.py  backfill.py  mymila.py  names_matching.py  read_mila_ldap.py  revision.py  supervisor.py  users_exceptions.py
sarc/models/: api.py  cluster.py  healthcheck_state.py  job.py  series.py  support.py  user.py
sarc/nodes/: __init__.py  node.py
sarc/notifications/: email.py  messages.py  mrkdwn.py  slack.py  underusage.py
sarc/patch/: __init__.py  placeholders.py  system.py
sarc/rest/: __init__.py  client.py
sarc/scraping/: dcgm.py  gpu_fixes.py  jobs.py  jobs_utils.py  prometheus.py  series.py  users.py
sarc/storage/: __init__.py  acquire.py  beegfs.py  diskusage.py  drac.py  get_diskusage.py  mila.py
sarc/tempo/: __init__.py
sarc/testing/: __init__.py
sarc/users/: __init__.py  acquire.py  backfill.py  db.py  drac.py  legacy_dump.py  manual.py  mila_ldap.py  mymila.py  read_mila_ldap.py  revision.py  supervisor.py  users_exceptions.py
scripts/: README.md  convert-old-sacct-cache.py  convert_old_slurmconfig_cache.py  dispatch_prometheus_cache.py  drac_to_manual.py  dump_users.py  gui-rest.py  launch_mongod.sh  mymila_to_manual.py  run_podman_postgresql.sh  sacct-acquire.py  setup_github_keys.sh  test_sql.py
scripts/cache_browser/: cache_browser.py
scripts/deploy/: README.md  install_services.sh
scripts/gcp/: fetch_daily.sh  fetch_hourly.sh  fetch_manual.sh  parse_daily.sh  parse_hourly.sh
scripts/prometheus/: backup.py  convert_cache.py  restore.py  sync_cache_gcp.py
scripts/remote/: README.md  fetch_mongo_backups.sh  mongo.sh  remote_checkout.sh  secrets_deploy.sh  serverinit.sh  setup_github_keys.sh
scripts/slurmconfutils/: extract_gpu_billings.py
scripts/systemd/: README.md  envvars.sh  mongo_backup.sh  notify_underusage.sh  sarc_backup.service  sarc_backup.timer  sarc_containers.service  sarc_notify_underusage.service  sarc_notify_underusage.timer  sarc_scrapers.service  sarc_scrapers.timer  sarc_scrapers_daily.service  sarc_scrapers_daily.timer  sarc_scrapers_hifreq.service  sarc_scrapers_hifreq.timer  sarc_scrapers_hourly.service  (+8 more)
serverscripts/: README.md  mongo.sh
serverscritps/: README.md  mongo.sh  serverinit.sh
setupscritps/: serverinit.sh
test_config/: otel_config.yml
tests/: conftest.py  id_test  sarc-test-client.json  sarc-test-with-logging.yaml  sarc-test.json  sarc-test.yaml  test_dummy.py  test_key.yaml
(+672 files in other folders)
