[project]
name = "sarc"
version = "0.1.0"
description = "Surveillance et analyse des ressources de calcul"
authors = [{ name = "Mila-IDT" }]
requires-python = "==3.14.*"
readme = "README.md"
dependencies = [
    "fabric>=3.0.0,<4",
    "prometheus-api-client>=0.7,<0.8",
    "pydantic>=2.11.4,<3",
    "sqlmodel>=0.0.38",
    "numpy>=2.4,<2.5",
    "ldap3>=2.9.1,<3",
    "python-hostlist>=2.2.1,<3",
    "tqdm>=4.66,<5",
    "flatten-dict>=0.5,<0.6",
    "simple-parsing>=0.1.0,<0.2",
    "sphinx>=9.1,<10",
    "myst-parser>=5,<6",
    "sphinx-rtd-theme>=3.0.2,<4",
    "nbsphinx>=0.9.3,<0.10",
    "opentelemetry-api>=1.36.0,<2",
    "opentelemetry-sdk>=1.36.0,<2",
    "requests-mock>=1.11.0,<2",
    "pandas>=3.0.1,<3.1.0",
    "gifnoc>=0.6,<0.7",
    "serieux>=0.3.6,<0.4",
    "watchdog>=6,<7",
    "python-dateutil>=2.9.0.post0,<3",
    "opentelemetry-exporter-otlp>=1.23.0,<2",
    "iguane",
    "filelock>=3.18.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.137,<0.138",
    "requests>=2.32.3,<3",
    "google-auth>=2.40.2,<3",
    "pyodbc>=5.2.0,<6",
    "azure-identity>=1.23.1,<2",
    "rapporteur>=0.1.1",
    "easy-oauth>=0.0.5",
    "pyotp>=2.9.0",
    "alembic>=1.18.4",
    "alembic-utils>=0.8.8",
    "cloud-sql-python-connector>=1.20.3",
    "pg8000>=1.31.5",
    "slack-sdk>=3.42.0",
]

[project.scripts]
sarc = "sarc.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
    "pytest-cov>=7,<8",
    "pytest-regressions>=2.7.0,<3,!=2.8.1",
    "tox>=4.25.0,<5",
    "fabric[testing]>=3.0.0,<4",
    "pytest-timeout>=2.1.0,<3",
    "pytest-custom-exit-code>=0.3.0,<0.4",
    "pytest-xdist>=3.3.1,<4",
    "jupyter>=1.0.0,<2",
    "tabulate>=0.10,<0.11",
    "tox-uv>=1.25.0,<2",
    "pytest-httpserver>=1.1.3,<2",
    "types-paramiko>=3.5.0.20240928",
    "pandas-stubs>=2.2.3.250308",
    "types-requests>=2.32.0.20250328",
    "types-ldap3>=2.9.13.20240205",
    "types-tqdm>=4.67.0.20250417",
    "pytest-env>=1.1.5,<2",
    "ruff>=0.15,<0.16",
    "sphinxcontrib-openapi>=0.9.0,<0.10.0",
    "time-machine>=3.2.0",
    "ty>=0.0.36",
    "psycopg[binary]>=3.3.4",
]
examples = ["seaborn>=0.13.2,<0.14"]

# to consider
#  - DTZ: datetimes without timezones (not right now)
#  - TC: type checking style

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["ARG", "E", "F", "FA", "LOG", "PERF", "PIE", "PL", "T20", "W", "I", "TID251"]
ignore = [
  "E501",     # line too long (ruff format will handle it)
  "PLW2901",  # loop variable overwritten by assignment
  "PLR0912",  # too many branches
  "PLR0913",  # too many function arguments
  "PLR0915",  # too many statements
  "PLR2004",  # replace magic value by variable
  "PLC0415",  # imports should be a the top level
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "E", "PERF", "T20"]
"sarc/testing/**" = ["T20"]
"examples/**" = ["T20"]
"docs/**" = ["T20"]
"scripts/**" = ["T201"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sqlmodel.SQLModel".msg = "Use 'from sarc.db.sqlmodel import SQLModel' (only for the SQLModel class itself)"

[tool.uv]
default-groups = [
    "dev",
    "examples",
]

[tool.uv.sources]
iguane = { git = "https://github.com/mila-iqia/IGUANE.git", rev = "9cd7b5e1253033c935e39da9c1b8a22cda440112" }

[tool.pytest_env]
TQDM_DISABLE = "1"

[tool.hatch.build.targets.sdist]
include = ["sarc"]

[tool.hatch.build.targets.wheel]
include = ["sarc"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.alembic]
script_location = "%(here)s/alembic"
timezone = "UTC"
#prepend_sys_path = [
#    "."
#]

[[tool.alembic.post_write_hooks]]
name = "ruff"
type = "exec"
executable = "ruff"
options = "check --fix REVISION_SCRIPT_FILENAME"

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev"]

[tool.hatch.envs.default.env-vars]
SARC_CONFIG = "{env:SARC_CONFIG:{root:real}/config/sarc-dev.secrets.yaml}"
SERIEUX_PASSWORD = "{env:SERIEUX_PASSWORD:_}"
SARC_SECRETS = "{env:SARC_SECRETS:{home:real}/secrets/sarc/config.yaml}"

[tool.hatch.envs.default.scripts]
uv = 'UV_PROJECT_ENVIRONMENT="{env:VIRTUAL_ENV}" "$(which uv)" {args}'
make-secrets = [
    "uv sync",
    'serieux patch -m "sarc.config:Config" -o "$(echo "{env:SARC_CONFIG}" | cut -d"," -f1)" "{env:SARC_SECRETS}:sarc" {args}',
]

[tool.hatch.envs.pixi]
detached = true
installer = "uv"

[tool.hatch.envs.pixi.scripts]
install-linux = [
    """which pixi && exit 0 \
        || curl -fsSL https://pixi.sh/install.sh | sh"""
]
install-macos = [
   "install-linux"
]

[tool.hatch.envs.pixi.overrides]
platform.linux.scripts = [
  "install=install-linux",
]
platform.macos.scripts = [
  "install=install-macos",
]

[tool.hatch.envs.podman]
detached = true

[tool.hatch.envs.podman.env-vars]
PODMAN_VERSION = "{env:PODMAN_VERSION:5.6.1}"

[tool.hatch.envs.podman.scripts]
install-linux = [
    """which podman >/dev/null && exit 0 \
        || hatch run pixi:install-linux""",
    """which podman >/dev/null && exit 0 \
        || which pixi >/dev/null 2>&1 || echo 'Please restart or source your shell.' && which pixi >/dev/null 2>&1""",
    """which podman >/dev/null && exit 0 \
        || pixi global install -c conda-forge 'podman=={env:PODMAN_VERSION}'"""
]
install-macos = [
    """which podman >/dev/null && exit 0 \
        || curl -sL https://github.com/containers/podman/releases/download/v{env:PODMAN_VERSION}/podman-installer-macos-universal.pkg \
        -o /tmp/podman-installer-macos-universal.pkg""",
    """which podman >/dev/null && exit 0 \
        || sudo installer -pkg /tmp/podman-installer-macos-universal.pkg -target /""",
    "podman machine inspect >/dev/null 2>&1 || podman machine init",
]

[tool.hatch.envs.podman.overrides]
platform.linux.scripts = [
  "install=install-linux",
]
platform.macos.scripts = [
  "install=install-macos",
]

[tool.hatch.envs.postgres]
template = "podman"

[tool.hatch.envs.postgres.env-vars]
POSTGRES_USER = "{env:POSTGRES_USER:{env:USER}}"
POSTGRES_INITDB_ROOT_USERNAME = "{env:POSTGRES_INITDB_ROOT_USERNAME:root}"
POSTGRES_INITDB_ROOT_PASSWORD = "{env:POSTGRES_INITDB_ROOT_PASSWORD:pass}"
POSTGRES_INITDB_PORT = "{env:POSTGRES_INITDB_PORT:5432}"
POSTGRESPOD_NAME = "{env:POSTGRESPOD_NAME:sarc_postgrespod_test}"

[tool.hatch.envs.postgres.scripts]
start = [
    "hatch run podman:install",
    "- podman machine inspect >/dev/null 2>&1 && podman machine start",
    # Run PostgreSQL 17 in the background:
    # -dt                                       : detached + allocated TTY.
    # --name {env:POSTGRESPOD_NAME}             : fixed name so we can stop/remove it later.
    # -p {env:POSTGRES_INITDB_PORT}:5432/tcp    : expose the standard PostgreSQL port on localhost.
    # -e POSTGRES_HOST_AUTH_METHOD=trust        : allow connections without a password,
    #                                             which matches the credential-less URL used by
    #                                             tests/conftest.py.
    # -e POSTGRES_USER="{env:POSTGRES_USER}"    : create the superuser role named after the host OS
    #                                             user, so libpq's default user (the OS user) just works
    #                                             without having to put a username in the connection URL.
    # -e POSTGRES_DB=postgres                   : keep the default admin database named "postgres"
    #                                             (otherwise the image would name it after POSTGRES_USER),
    #                                             which is what tests/conftest.py connects to.
    # -c max_connections=300                    : raise the connection cap above the default 100.
    #                                             Each test creates a fresh DbConfig with its own
    #                                             SQLAlchemy engine (pool of up to 15 conn) and engines
    #                                             are not explicitly disposed, so multi-fixture tests
    #                                             can exceed 100 and trigger "too many clients already".
    """podman start {env:POSTGRESPOD_NAME} \
        || podman run -dt \
        --name {env:POSTGRESPOD_NAME} \
        -p {env:POSTGRES_INITDB_PORT}:5432/tcp \
        -e POSTGRES_HOST_AUTH_METHOD=trust \
        -e POSTGRES_USER="{env:POSTGRES_USER}" \
        -e POSTGRES_DB=postgres \
        docker.io/library/postgres:17 \
        -c max_connections=300""",
    """until podman exec {env:POSTGRESPOD_NAME} pg_isready -h localhost -U "{env:POSTGRES_USER}" >/dev/null 2>&1; do
        sleep 0.2
    done""",
    """podman exec {env:POSTGRESPOD_NAME} bash -c ' \
        psql -U "{env:POSTGRES_USER}" -lqt | grep -qF sarc-dev \
        || createdb -U "{env:POSTGRES_USER}" sarc-dev \
    '""",
    "echo 'PostgreSQL should now be available at localhost:{env:POSTGRES_INITDB_PORT}'"
]
stop = [
    "podman stop {env:POSTGRESPOD_NAME}",
    # We do not need to keep test postgres container
    "- podman rm sarc_postgrespod_test",
]
restart = [
    "- stop",
    "start",
]
